<resources>
    <string name="app_name">鱼饼播放器</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ablum">专辑</string>
    <string name="title">歌名</string>
    <string name="singer">歌手</string>
    <string name="search_text">请输入要搜索歌名...</string>
    <string name="search">搜索</string>
    <string name="loading">正在加载中...</string>
</resources>
