<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:layout_margin="4dp"
        android:id="@+id/ll_search">
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:background="@drawable/corners_bg"
            android:hint="@string/search_text"
            android:gravity="center_vertical"
            android:layout_weight="8"
            tools:ignore="RtlHardcoded"
            android:id="@+id/edt_query"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/btn_query"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_search">
        <Button
            android:id="@+id/btn_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击加载热门音乐"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ll_search"
        android:visibility="gone">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:text="@string/loading"/>
    </RelativeLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_search"
        android:visibility="gone"
        android:id="@+id/netlist"></ListView>
</RelativeLayout>